--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,3 +1,7 @@
+* {
+  font-family: "Roboto";
+}
+
 .home-page {
   margin-top: 60px;
 }
@@ -154,4 +158,9 @@
   padding: 8px;
   height: 34px;
   margin-top: 1px;
+  background-color: rgb(25, 135, 84);
+  border: none;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
 }
