--- a/src/components/header.css
+++ b/src/components/header.css
@@ -15,6 +15,10 @@
   height: 60px;
 }
 
+.orders-link.header-link.active {
+  text-decoration: underline;
+}
+
 .header .left-section {
   width: 208px;
 }
@@ -71,7 +75,7 @@
   flex: 1;
   width: 0;
   font-size: 16px;
-  height: 38px;
+  height: 40px;
   padding-left: 15px;
   border: none;
   border-top-left-radius: 5px;
