--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -3,7 +3,7 @@
 }
 
 .home-page {
-  margin-top: 60px;
+  margin-top: -140px;
 }
 
 .home-page .products-grid {
@@ -132,6 +132,13 @@
 
 .home-page .product-spacer {
   flex: 1;
+}
+
+select {
+  border: rgb(200, 200, 200), solid, 1px;
+  width: 3rem;
+  height: 2rem;
+  border-radius: 5px;
 }
 
 .home-page .added-to-cart {
