Homework 7m, 7n and 7o completed. Lesson 7 completed.

--- a/src/pages/TrackingPage.css
+++ b/src/pages/TrackingPage.css
@@ -18,6 +18,10 @@
   margin-bottom: 30px;
 }
 
+.progress-bar {
+  transition: width 0.5s ease;
+}
+
 .tracking-page .delivery-date {
   font-size: 25px;
   font-weight: 700;
